# i2i

./: .env.example  BRANDING.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  PUBLISHING.md  README.md  RFC-MCIP.md  config.json  demo.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
docs/integrations/: langchain.md
examples/: ai_debate.py  basic_usage.py  epistemic_filter.py
i2i/: __init__.py  cli.py  config.py  consensus.py  epistemic.py  protocol.py  providers.py  router.py  schema.py  task_classifier.py  verification.py
i2i/integrations/: __init__.py
i2i/integrations/langchain/: __init__.py  verifier.py
logs/: .021b19331da3172436a394115a339f59142c3285-audit.json  .280edd2ad8e8db7f1c29841a1fe293e7397a4401-audit.json  .f5422f4293f02152013f70c237424f9d3c9ecc7e-audit.json
openclaw-skills/model-consensus-mcip/: SKILL.md
openclaw-skills/model-consensus-mcip/references/: mcip-binding.md
openclaw-skills/model-consensus-mcip/scripts/: run_mcip_consensus.py
paper/: i2i-mcip.aux  i2i-mcip.tex
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_providers.py
tests/integration/: test_protocol.py
tests/unit/: test_config.py  test_consensus.py  test_consortium.py  test_epistemic.py  test_features.py  test_mcip_model_panel.py  test_multimodal.py  test_providers.py  test_router.py  test_schema.py  test_search.py  test_verification.py
