[project]
name = "i2i"
version = "0.1.0"
description = "An open protocol for multi-model consensus, cross-verification, intelligent routing, and epistemic classification"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.9.0",
    "anthropic>=0.18.0",
    "cohere>=4.0.0",
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",
    "mistralai>=0.1.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]
